--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "FII",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.1.0",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0"
   },
