--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "typescript": "^3.9.7"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "eslint": "^7.7.0"
   }
 }
