--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "author": "FII",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^12.3.1",
-    "typescript": "^3.9.7"
+    "discord.js": "^12.3.1"
+  },
+  "scripts": {
+    "dev": "nodemon index.js"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
     "eslint": "^7.7.0"
   }
 }
