--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "repository": "https://github.com/federation-interservices-d-informatique/bot.git",
   "author": "FII",
   "license": "MIT",
+  "@types/node": "^14.6.0",
   "dependencies": {
-    "discord.js": "^12.3.1"
+    "better-sqlite-pool": "^0.3.0",
+    "better-sqlite3": "^7.1.0",
+    "chalk": "^4.1.0",
+    "discord.js": "^12.3.1",
+    "dotenv": "^8.2.0",
+    "enmap": "^5.6.1"
   },
   "scripts": {
     "dev": "nodemon index.js"
