--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "author": "FII",
   "license": "MIT",
   "dependencies": {
+    "bufferutil": "^4.0.2",
     "discord.js": "^12.5.1",
     "discordjs-moka": "^3.0.6",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "erlpack": "^0.1.3",
+    "utf-8-validate": "^5.0.3",
+    "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
     "@types/node": "^14.14.17",
