--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "discord.js": "^12.5.1",
     "discordjs-moka": "^3.0.7",
     "dotenv": "^8.2.0",
+    "enmap": "^5.8.2",
     "erlpack": "^0.1.3",
     "utf-8-validate": "^5.0.3",
     "zlib-sync": "^0.1.7"
