--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "FII",
   "license": "MIT",
   "dependencies": {
+    "argon2-ffi": "^2.0.0",
     "bufferutil": "^4.0.2",
     "discord.js": "^12.5.1",
     "discordjs-moka": "^3.0.7",
