--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "FII",
   "license": "MIT",
   "dependencies": {
+    "@keyv/postgres": "git+https://github.com/Woomy4680-exe/keyv-postgres.git",
+    "@types/keyv": "^3.1.1",
     "argon2-ffi": "^2.0.0",
     "bufferutil": "^4.0.3",
     "discord.js": "^12.5.1",
@@ -14,6 +16,7 @@
     "dotenv": "^8.2.0",
     "enmap": "^5.8.2",
     "erlpack": "^0.1.3",
+    "keyv": "^4.0.3",
     "utf-8-validate": "^5.0.4",
     "zlib-sync": "^0.1.7"
   },
