--- a/package.json
+++ b/package.json
@@ -10,15 +10,11 @@
     "@keyv/postgres": "git+https://github.com/Woomy4680-exe/keyv-postgres.git",
     "@types/keyv": "^3.1.1",
     "argon2-ffi": "^2.0.0",
-    "bufferutil": "^4.0.3",
     "discord.js": "^12.5.1",
-    "discordjs-moka": "^3.0.9",
+    "discordjs-moka": "^3.1.0",
     "dotenv": "^8.2.0",
-    "enmap": "^5.8.2",
     "erlpack": "^0.1.3",
-    "keyv": "^4.0.3",
-    "utf-8-validate": "^5.0.4",
-    "zlib-sync": "^0.1.7"
+    "keyv": "^4.0.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
