--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
   "dependencies": {
     "@keyv/postgres": "git+https://github.com/Woomy4680-exe/keyv-postgres.git",
     "@types/keyv": "^3.1.1",
-    "@types/koa": "^2.13.0",
     "argon2-ffi": "^2.0.0",
     "discord.js": "^12.5.1",
     "discordjs-moka": "^3.1.0",
     "dotenv": "^8.2.0",
     "erlpack": "^0.1.3",
-    "keyv": "^4.0.3",
-    "koa": "^2.13.1"
+    "keyv": "^4.0.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.30",
