--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "bot"
-version = "0.1.0"
+version = "3.0.0"
 authors = ["Woomy4680-exe <matzar1808@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+serenity = "0.10.5"
+tokio = { features = ["full"], version = "1.4.0" }
+
+[profile.release]
+lto = true
