--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bot"
 version = "3.0.0"
-authors = ["Woomy4680-exe <matzar1808@gmail.com>"]
+authors = ["FII developpement team"]
 edition = "2018"
 
 [dependencies]
